<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">YouCSMe</string>
    <string name="addEvent">Add Event</string>
    <string name="settings">Settings</string>
    <string name = "victorySelfie">Victory Selfie</string>
    <string name = "courseName">Course Name : </string>
    <string name="help">Help</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name = "calendar">Calendar</string>
    <string name="eventName">Event Name : </string>
    <string name="eventType">Event Type</string>
    <string name="setDate">Set Date    </string>
    <string name="setTime">Set Time</string>
    <string name="events">Today\'s Events</string>
    <string name="editEvent">Edit Event</string>
    <string name="cancel">Cancel</string>
    <string name="completed">Completed</string>


    <string-array name="eventType">
        <item>Homework</item>
        <item>Project</item>
        <item>Exam</item>
        <item>Quiz</item>
        <item>Midterm</item>
        <item>Final</item>
        <item>Presentation</item>
        <item>Lab</item>
        <item>Other</item>
    </string-array>

    <string-array name="classList">
        <item>CMPSC 1</item>
        <item>CMPSC 8</item>
        <item>CMPSC 16</item>
        <item>CMPSC 24</item>
        <item>CMPSC 32</item>
        <item>CMPSC 40</item>
        <item>CMPSC 48</item>
        <item>CMPSC 56</item>
        <item>CMPSC 64</item>
        <item>CMPSC 99</item>
        <item>CMPSC 111</item>
        <item>CMPSC 130A</item>
        <item>CMPSC 130B</item>
        <item>CMPSC 138</item>
        <item>CMPSC 140</item>
        <item>CMPSC 153A</item>
        <item>CMPSC 154</item>
        <item>CMPSC 160</item>
        <item>CMPSC 162</item>
        <item>CMPSC 165A</item>
        <item>CMPSC 165B</item>
        <item>CMPSC 167</item>
        <item>CMPSC 170</item>
        <item>CMPSC 171</item>
        <item>CMPSC 172</item>
        <item>CMPSC 174A</item>
        <item>CMPSC 174B</item>
        <item>CMPSC 176A</item>
        <item>CMPSC 176B</item>
        <item>CMPSC 176C</item>
        <item>CMPSC 177</item>
        <item>CMPSC 178</item>
        <item>CMPSC 180</item>
        <item>CMPSC 181B</item>
        <item>CMPSC 182</item>
        <item>CMPSC 185</item>
        <item>CMPSC 186</item>
        <item>CMPSC 189A</item>
        <item>CMPSC 189B</item>
        <item>CMPSC 192</item>
        <item>CMPSC 193</item>
        <item>CMPSC 196</item>
        <item>CMPSC 199</item>
        <item>CMPSC 209</item>
        <item>CMPSC 211A</item>
        <item>CMPSC 211B</item>
        <item>CMPSC 211C</item>
        <item>CMPSC 211D</item>
        <item>CMPSC 216</item>
        <item>CMPSC 219</item>
        <item>CMPSC 220</item>
        <item>CMPSC 225</item>
        <item>CMPSC 230</item>
        <item>CMPSC 231</item>
        <item>CMPSC 235</item>
        <item>CMPSC 240A</item>
        <item>CMPSC 240B</item>
        <item>CMPSC 254</item>
        <item>CMPSC 260</item>
        <item>CMPSC 263</item>
        <item>CMPSC 266</item>
        <item>CMPSC 267</item>
        <item>CMPSC 270</item>
        <item>CMPSC 271</item>
        <item>CMPSC 272</item>
        <item>CMPSC 273</item>
        <item>CMPSC 274</item>
        <item>CMPSC 276</item>
        <item>CMPSC 279</item>
        <item>CMPSC 280</item>
        <item>CMPSC 281B</item>
        <item>CMPSC 284</item>
        <item>CMPSC 290</item>
        <item>CMPSC 501</item>
        <item>CMPSC 502</item>
        <item>CMPSC 592</item>
        <item>CMPSC 593</item>
        <item>CMPSC 594</item>
        <item>CMPSC 595</item>
        <item>CMPSC 596</item>
        <item>CMPSC 597</item>
        <item>CMPSC 598</item>
        <item>CMPSC 599</item>
        <item>CHEM 1A</item>
        <item>CHEM 1AL</item>
        <item>CHEM 1B</item>
        <item>CHEM 1BL</item>
        <item>CHEM 1C</item>
        <item>CHEM 1CL</item>
        <item>EARTH 2</item>
        <item>EARTH 4</item>
        <item>EARTH 4W</item>
        <item>ECE 152A</item>
        <item>EEMB 2</item>
        <item>EEMB 2L</item>
        <item>ENGR 101</item>
        <item>GEOG 115A</item>
        <item>GEOG 115B</item>
        <item>GEOG 11BL</item>
        <item>MATH 3A</item>
        <item>MATH 3B</item>
        <item>MATH 4A</item>
        <item>MATH 4B</item>
        <item>MATH 6A</item>
        <item>MCDB 1A</item>
        <item>MCDB 1AL</item>
        <item>MCDB 1B</item>
        <item>MCDB 1BL</item>
        <item>PHYS 1</item>
        <item>PHYS 2</item>
        <item>PHYS 3</item>
        <item>PHYS 3L</item>
        <item>PHYS 4</item>
        <item>PHYS 4L</item>
        <item>PHYS 5</item>
        <item>PHYS 5L</item>
        <item>PSTAT 120A</item>
        <item>PSTAT 120B</item>
        <item>GE</item>
    </string-array>

</resources>
