<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:YouCSMe="http://schemas.android.com/apk/res-auto"
        >



    <item
            android:id="@+id/addEvent"
            android:orderInCategory="1"
            android:title="@string/addEvent"
            android:icon="@android:drawable/ic_menu_add"
            YouCSMe:showAsAction="ifRoom"/>


    <item
            android:id="@+id/settings"
            android:orderInCategory="2"
            android:title="@string/settings"
            android:icon="@android:drawable/ic_menu_manage"
            YouCSMe:showAsAction="never"/>

    <item
            android:id="@+id/help"
            android:orderInCategory="100"
            android:title="@string/help"
            android:icon="@android:drawable/ic_menu_help"
            YouCSMe:showAsAction="never"/>

</menu>